# crazyflie_qualisys_mocap

./: README.md
marker_deck/: Motion capture marker deck_v3.f3d  Motion capture marker deck_v3.stl  README.md
mocap_bridge/: package.xml  setup.py
mocap_bridge/config/: params.yaml  params_cflib.yaml  params_controller.yaml
mocap_bridge/launch/: cflib_controller.launch.py  drone_controller.launch.py  mocap_bridge.launch.py  rosbag_record.launch.py
mocap_bridge/mocap_bridge/: cflib_controller_node.py  drone_controller_node.py  flight_handler.py  node.py  pose_handler.py  teste_mocap.py
mocap_bridge/mocap_bridge/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mocap_bridge/mocap_bridge/log/: latest_build
qualisys_ros2/: CMakeLists.txt  README.md  package.xml
qualisys_ros2/include/qualisys_ros2/: QualisysCalib.h  QualisysDriver.h  QualisysOdom.h
qualisys_ros2/launch/: calibrate.launch.py  qualisys.launch.py  qualisys_calib.launch.py  qualisys_odom.launch.py
qualisys_ros2/msg/: Markers.msg  Subject.msg
qualisys_ros2/src/: KalmanFilter.cpp  QualisysCalib.cpp  QualisysDriver.cpp  QualisysOdom.cpp  qualisys_calib_node.cpp  qualisys_node.cpp  qualisys_odom_node.cpp
qualisys_ros2/srv/: SetPose.srv
