<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qualisys_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 port of the Qualisys Motion Capture driver. Receives 6DOF pose data from QTM and publishes it as ROS 2 messages.</description>
  <maintainer email="guilherme.andre.santos@gmail.com">gitonico</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>      
  <depend>std_srvs</depend>       
  <depend>nav_msgs</depend>      
  <depend>tf2</depend>            
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
